--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
         </div>
     </header>
 
-    <section class="hero">
+    <div class="top-visual-container">
+        <img src="IMG_9267.jpg" alt="メインビジュアル" class="main-img">
+        <div class="overlay-wrapper floating-text">
+            <div class="overlay-text">AKEBONO</div>
+            <div class="overlay-subtext">Nexus</div>
+            <div class="overlay-catchphrase">
+                境界を越え、新しい夜明けを共に創る<br>
+                "Beyond Boundaries, <br>
+                Creating a New Dawn Together."
+            </div>
+        </div>
+    </div>
+
+    <section class="hero-text-area">
         <div class="hero-content">
             <h1>採用のミスマッチを減らす。</h1>
             <p class="sub-text">運送業に特化した有料職業紹介で、即戦力人材をご紹介します。</p>
@@ -30,8 +43,11 @@
                 あけぼのタクシー有限会社は、運送業界に特化した有料職業紹介事業者として、現場を理解した視点で「採用成功」と「定着」を支援します。
             </p>
             <div class="cta-buttons">
-                <a href="#" class="btn business">【求人企業の方】無料相談はこちら</a>
-                <a href="#" class="btn seeker">【求職者の方】面談を申し込む</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSekY5R_xzlGIU4cR11V2f3bq_Y7FXVGYMkCkoN5ELwuXtIMPw/viewform?usp=header"
+                    class="btn business" target="_blank" rel="noopener noreferrer">【求人企業の方】無料相談はこちら</a>
+
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScwpAKKNGocPc62YoPfxBb94smyMBu9Bkd9-q_MzIDjyp8mYA/viewform"
+                    class="btn seeker" target="_blank" rel="noopener noreferrer">【求職者の方】面談を申し込む</a>
             </div>
         </div>
     </section>
@@ -155,8 +171,7 @@
                         <p class="a">対応可能状況は時期や条件により異なります。詳細はお問い合わせください。</p>
                     </div>
                 </div>
-        </div>
-        </section>
+            </section>
         </div>
     </main>
 
