--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="top-visual-container">
-        <img src="IMG_9267.jpg" alt="メインビジュアル" class="main-img">
+        <img src="topImage.jpg" alt="メインビジュアル" class="main-img">
         <div class="overlay-wrapper floating-text">
             <div class="overlay-text">AKEBONO</div>
             <div class="overlay-subtext">Nexus</div>
@@ -119,15 +119,16 @@
                             </tr>
                             <tr>
                                 <th>許可番号</th>
-                                <td>申請中</td>
+                                <td>40-ユ-301706</td>
                             </tr>
                             <tr>
                                 <th>対応エリア</th>
-                                <td>応相談</td>
+                                <td>福岡、佐賀、大分、
+                                    熊本、長崎、山口</td>
                             </tr>
                             <tr>
                                 <th>営業時間</th>
-                                <td>平日9:00~18:00</td>
+                                <td>平日9:00~17:00</td>
                             </tr>
                         </table>
                     </div>
