--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>あけぼのタクシー有限会社 | 有料職業紹介事業</title>
+    <title>AkebonoNexus有限会社 | 有料職業紹介事業</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
 
     <header>
         <div class="header-container">
-            <div class="logo">あけぼのタクシー有限会社<span> | 有料職業紹介事業</span></div>
+            <div class="logo">AkebonoNexus有限会社<span> | 有料職業紹介事業</span></div>
             <nav>
                 <ul>
                     <li><a href="#">トップページ</a></li>
@@ -40,7 +40,7 @@
             <h1>採用のミスマッチを減らす。</h1>
             <p class="sub-text">運送業に特化した有料職業紹介で、即戦力人材をご紹介します。</p>
             <p class="description">
-                あけぼのタクシー有限会社は、運送業界に特化した有料職業紹介事業者として、現場を理解した視点で「採用成功」と「定着」を支援します。
+                AkebonoNexus有限会社は、運送業界に特化した有料職業紹介事業者として、現場を理解した視点で「採用成功」と「定着」を支援します。
             </p>
             <div class="cta-buttons">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSekY5R_xzlGIU4cR11V2f3bq_Y7FXVGYMkCkoN5ELwuXtIMPw/viewform?usp=header"
@@ -111,7 +111,7 @@
                         <table class="info-table">
                             <tr>
                                 <th>会社名</th>
-                                <td>あけぼのタクシー有限会社</td>
+                                <td>AkebonoNexus有限会社</td>
                             </tr>
                             <tr>
                                 <th>事業内容</th>
@@ -177,7 +177,7 @@
     </main>
 
     <footer>
-        <p>&copy; あけぼのタクシー有限会社 All Rights Reserved.</p>
+        <p>&copy; AkebonoNexus有限会社 All Rights Reserved.</p>
     </footer>
 </body>
 
