--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AkebonoNexus有限会社 | 有料職業紹介事業</title>
+    <title>あけぼのタクシー有限会社 | 有料職業紹介事業</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico?ver=1.0" id="favicon">
 </head>
 
 <body>
 
     <header>
         <div class="header-container">
-            <div class="logo">AkebonoNexus有限会社<span> | 有料職業紹介事業</span></div>
+            <div class="logo">あけぼのタクシー有限会社<span> | 有料職業紹介事業</span></div>
             <nav>
                 <ul>
                     <li><a href="#">トップページ</a></li>
@@ -111,7 +112,7 @@
                         <table class="info-table">
                             <tr>
                                 <th>会社名</th>
-                                <td>AkebonoNexus有限会社</td>
+                                <td>あけぼのタクシー有限会社</td>
                             </tr>
                             <tr>
                                 <th>事業内容</th>
@@ -177,7 +178,7 @@
     </main>
 
     <footer>
-        <p>&copy; AkebonoNexus有限会社 All Rights Reserved.</p>
+        <p>&copy; あけぼのタクシー有限会社 All Rights Reserved.</p>
     </footer>
 </body>
 
